# anti-android-virus

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: ci.yml
android/: README.md  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: adversion.properties  classes.dex  signatures.aav
android/app/src/main/cpp/: CMakeLists.txt  aavjni.cc  aavjni.h  jniutil.cc  jniutil.h
android/app/src/main/java/com/av/aav/: Engine.java  MainActivity.java  ScanResult.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
apps/: CMakeLists.txt
apps/aavscan/: aavscan.cc
apps/sigtool/: sample_apk.cc  sample_data.cc  sample_data.h  sigtool.cc
cmake/: aavConfig.cmake.in
docs/: Architecture.md  Benchmarks.md  Building.md  ObjectModel.md  README.md  SignatureDbFormat.md  Signatures.md  Thesis.md
fuzz/: CMakeLists.txt  fuzz_dexfile.cc
include/aav/: aav.h  engine_interface.h  object_interface.h
scripts/: README.md  android-app.sh  android.sh  asan.sh  build.sh  clean.sh  common.sh  coverage.sh  format.sh  fuzz.sh  install-deps-macos.sh  install-deps-ubuntu.sh  run.sh  test.sh
src/: CMakeLists.txt
src/api/aav/: ad_sig.h  factory.h  file_id_interface.h  file_map_interface.h  file_source.h  file_stream_interface.h  file_system_interface.h  file_target_interface.h  load_config.h  mem_source.h  mem_stream_interface.h  mem_target_interface.h  module_interface.h  object_ptr.h  scan_object_interface.h  scan_object_property.h  scan_option.h  scan_result.h  scanner_interface.h  sig_format.h  sig_mgr_interface.h  stream_interface.h  target_interface.h
src/dex/: ac_matcher.cc  ac_matcher.h  dex_analysis.cc  dex_analysis.h  dex_code.cc  dex_code.h  dex_code_scan_result.cc  dex_code_scan_result.h  dex_code_scan_result_mgr.cc  dex_code_scan_result_mgr.h  dex_code_sig_mgr.cc  dex_code_sig_mgr.h  dex_file.cc  dex_file.h  dex_format.h  dex_parser.cc  dex_parser.h  dex_path_scan_result.cc  dex_path_scan_result.h  dex_path_scan_result_mgr.cc  dex_path_scan_result_mgr.h  dex_path_sig_mgr.cc  dex_path_sig_mgr.h  dex_scanner.cc  dex_scanner.h  dex_sig.h  dex_sig_mgr.cc  dex_sig_mgr.h  libdex_export.cc
src/engine/: engine.cc  object.cc
src/platform/: file_map.cc  file_map.h  file_stream.cc  file_stream.h  file_system.cc  file_system.h  file_target.cc  file_target.h  libplatform_export.cc  mem_stream.cc  mem_stream.h  mem_target.cc  mem_target.h  module.cc  module.h
src/scan/: apk_scanner.cc  apk_scanner.h  file_id.cc  file_id.h  libapk_export.cc  libfileid_export.cc
src/sig/: common_define.h  libsigmgr_export.cc  malware_name.h  sig_db_structure.h  sig_mgr.cc  sig_mgr.h
src/utils/: blowfish.cc  blowfish.h  crc32.cc  crc32.h  file_uncompress.cc  file_uncompress.h  leb128.cc  leb128.h  log.cc  log.h
tests/: CMakeLists.txt
tests/e2e/: mem_scan_check.cc  scan_dir.cmake  scan_multidex.cmake  scan_sample.cmake  scan_sample_mem.cmake
tests/unit/: test_actree.cc  test_apkscanner.cc  test_blowfish.cc  test_crc32.cc  test_detection.cc  test_dexanalysis.cc  test_dexparse.cc  test_engine.cc  test_fileid.cc  test_gzip.cc  test_leb128.cc  test_log.cc  test_pathlogic.cc  test_platform.cc  test_sigmgr.cc  test_support.h
